@@ -60,3 +60,11 @@ void pango_renderer_set_matrix (PangoRenderer *renderer, const PangoMatrix_ornul
 const PangoMatrix_ornull *pango_renderer_get_matrix (PangoRenderer *renderer);
 
 #endif /* 1.8.0 */
+
+#if PANGO_CHECK_VERSION (1, 19, 0) /* FIXME: 1.20 */
+
+PangoLayout * pango_renderer_get_layout (PangoRenderer *renderer);
+
+PangoLayoutLine * pango_renderer_get_layout_line (PangoRenderer *renderer);
+
+#endif
